[gd_scene load_steps=32 format=1]

[ext_resource path="res://entities/ship/ship.gd" type="Script" id=1]
[ext_resource path="res://default_shader.tres" type="Shader" id=2]
[ext_resource path="res://sheet/normal.playership1_blue.atex" type="Texture" id=3]
[ext_resource path="res://sheet/sheet.player_ship1_blue.atex" type="Texture" id=4]
[ext_resource path="res://particles/warp_frame01.tex" type="Texture" id=5]
[ext_resource path="res://particles/warp_frame02.tex" type="Texture" id=6]
[ext_resource path="res://particles/warp_frame03.tex" type="Texture" id=7]
[ext_resource path="res://particles/warp_frame04.tex" type="Texture" id=8]
[ext_resource path="res://particles/warp_frame05.tex" type="Texture" id=9]
[ext_resource path="res://particles/warp_frame06.tex" type="Texture" id=10]
[ext_resource path="res://particles/warp_frame07.tex" type="Texture" id=11]
[ext_resource path="res://particles/warp_frame08.tex" type="Texture" id=12]
[ext_resource path="res://particles/warp_frame09.tex" type="Texture" id=13]
[ext_resource path="res://sfx/sfx_laser1.smp" type="Sample" id=14]
[ext_resource path="res://sfx/ship_explosion.smp" type="Sample" id=15]
[ext_resource path="res://sfx/warp_drive_02.smp" type="Sample" id=16]


[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -30.8988, 16.5323, -34.5701, 19.1547, -36.668, -4.44661, -33.1715, -4.79625, -27.2275, 1.32261 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 33.6115, -4.62143, 37.2828, -4.44661, 34.8353, 19.3295, 30.2898, 16.3575, 26.7933, 1.67226 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 9.83534, 20.0288, -10.6191, 19.854, -30.8988, 16.5323, -27.2275, 1.32261, -9.04572, -8.6424, 9.31087, -8.99205, 26.7933, 1.67226, 30.2898, 16.3575 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -9.04572, -8.6424, -6.24852, -28.0479, 5.81438, -28.2228, 9.31087, -8.99205 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -5.72404, 28.2456, -10.6191, 19.854, 9.83534, 20.0288, 5.81438, 27.896 )

[sub_resource type="ColorRamp" id=6]

offsets = FloatArray( 0, 0.285714, 0.766234, 1 )
colors = ColorArray( 1, 0, 0, 1, 0.921875, 1, 0, 1, 0.43792, 0.18219, 0.777344, 1, 0.210938, 0.24176, 1, 1 )

[sub_resource type="ColorRamp" id=7]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CanvasItemMaterial" id=8]

shader/shader = ExtResource( 2 )
shader/shading_mode = 0
shader_param/BLINKING_SPEED = 0.0
shader_param/normal = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=9]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( -30.8988, 16.5323, -34.5701, 19.1547, -36.668, -4.44661, -33.1715, -4.79625, -27.2275, 1.32261 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 33.6115, -4.62143, 37.2828, -4.44661, 34.8353, 19.3295, 30.2898, 16.3575, 26.7933, 1.67226 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 9.83534, 20.0288, -10.6191, 19.854, -30.8988, 16.5323, -27.2275, 1.32261, -9.04572, -8.6424, 9.31087, -8.99205, 26.7933, 1.67226, 30.2898, 16.3575 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( -9.04572, -8.6424, -6.24852, -28.0479, 5.81438, -28.2228, 9.31087, -8.99205 )

[sub_resource type="ConvexPolygonShape2D" id=14]

custom_solver_bias = 0.0
points = Vector2Array( -5.72404, 28.2456, -10.6191, 19.854, 9.83534, 20.0288, 5.81438, 27.896 )

[sub_resource type="SampleLibrary" id=15]

samples/sfx_laser1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/ship_explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/warp_drive_02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}

[node name="Ship" type="KinematicBody2D" groups=[
"ship",
]]

visibility/light_mask = 2
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 5 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )
free_movement = true
can_shoot = true
fake_speed = 0.0

[node name="ShipDeathParticles2D" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 1.46025
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.15
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.1
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 6.0
params/tangential_accel = 0.0
params/damping = 26.257
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 0.75
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 0.41
randomness/linear_velocity = -0.26
randomness/radial_accel = 0.71
randomness/damping = 0.61
randomness/initial_size = 1.0
color/color = Color( 0, 0, 0, 1 )
color/color_ramp = SubResource( 6 )

[node name="ShipParticles2D" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 3.0
config/process_mode = 1
config/offset = Vector2( 0, 10 )
config/half_extents = Vector2( 24, 7 )
config/local_space = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.7
params/initial_angle = 0.0
params/initial_size = 1.5
params/final_size = 5.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.22
randomness/damping = 0.51
randomness/initial_size = 0.25
randomness/final_size = 0.22
color/color_ramp = SubResource( 7 )

[node name="ShipSprite" type="Sprite" parent="."]

visibility/light_mask = 3
material/material = SubResource( 8 )
transform/scale = Vector2( 0.75, 0.75 )
z/z = 1
texture = ExtResource( 4 )

[node name="ShipCollisionShape2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -6.24852, -28.0479, 5.81438, -28.2228, 9.31087, -8.99205, 26.7933, 1.67226, 33.6115, -4.62143, 37.2828, -4.44661, 34.8353, 19.3295, 30.2898, 16.3575, 9.83534, 20.0288, 5.81438, 27.896, -5.72404, 28.2456, -10.6191, 19.854, -30.8988, 16.5323, -34.5701, 19.1547, -36.668, -4.44661, -33.1715, -4.79625, -27.2275, 1.32261, -9.04572, -8.6424 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="WarpAnimation" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 0.75, 0.75 )
frames = SubResource( 9 )
animation = "default"
frame = 2

[node name="HitBox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 11 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 12 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 13 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 14 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/mask = 18

[node name="HitBoxCollision" type="CollisionPolygon2D" parent="HitBox"]

build_mode = 0
polygon = Vector2Array( -6.24852, -28.0479, 5.81438, -28.2228, 9.31087, -8.99205, 26.7933, 1.67226, 33.6115, -4.62143, 37.2828, -4.44661, 34.8353, 19.3295, 30.2898, 16.3575, 9.83534, 20.0288, 5.81438, 27.896, -5.72404, 28.2456, -10.6191, 19.854, -30.8988, 16.5323, -34.5701, 19.1547, -36.668, -4.44661, -33.1715, -4.79625, -27.2275, 1.32261, -9.04572, -8.6424 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="ShipBlinkingTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = false

[node name="ShipActivationTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 10
config/samples = SubResource( 15 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="WarpAnimation" to="." method="_on_WarpAnimation_finished"]

[connection signal="body_enter" from="HitBox" to="." method="_on_HitBoxArea_body_enter"]

[connection signal="timeout" from="ShipBlinkingTimer" to="." method="_on_ShipBlinkingTimer_timeout"]

[connection signal="timeout" from="ShipActivationTimer" to="." method="_on_ShipActivationTimer_timeout"]


